static/global.css
@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');

body {
	margin: 0;
	padding: 0;
	overflow-x: hidden;
	background: black;
	color: white;
	font-family: 'Quicksand', sans-serif;
}

a {
	color: white;
	text-decoration: none;
}

a:visited {
	color: white;
}

.main {
	height: 100%;
	display: flex;
	flex-direction: column;
}

.message {
	z-index: -1;
	position: fixed;
	top: 0;
	left: 0;
	display: grid;
	align-items: center;
	justify-items: center;
	width: 100%;
	height: 100vh;
}

